# MCP-Server

./: .dockerignore  .env  .env.example  .env.local  .gitignore  Dockerfile  MCP_CATALOG_MAINTENANCE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: fly.yaml
src/: main.py
src/core/: config.py  logging.py
src/db/: models.py  session.py
src/domain/: resource_service.py
src/formatters/: resource_formatter.py
src/repositories/: resource_repository.py
src/schemas/: common.py  resources.py  tools.py
src/server/: server.py
src/server/prompts/: prompts.py
src/server/resources/: resources.py
src/server/tools/: tools.py
src/services/: local_interaction_helpers.py
